# dairo-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  warm-release-cache.yml
contract/: canonical-operations.json  dairo.openapi.json  implemented-operations.json  live-operations.json
install/: install.ps1  install.sh
ops/github-apps/: dairo-bot-manifest.html  dairo-bot-manifest.json
scripts/: configure-release-github-app.mjs  gen-canonical-operations.py  generate-release-notes.mjs  prepare-npm-packages.mjs  register-release-github-app.mjs  render-homebrew-formula.py
src/: api.rs  auth.rs  cli.rs  config.rs  doctor.rs  fsutil.rs  listen.rs  main.rs  mcp_catalog.rs  mcp_install.rs  output.rs  update.rs  webhook.rs
src/api/: mod.rs  models.rs
src/init/: install.rs  manifest.rs  mod.rs  render.rs  templates.rs
src/init/templates/cloudflare-workers/: DAIRO.md.tmpl  wrangler.toml.tmpl
src/init/templates/cloudflare-workers/src/: index.ts.tmpl
src/init/templates/express/: DAIRO.md.tmpl
src/init/templates/express/src/: dairo.ts.tmpl  server.ts.tmpl
src/init/templates/fastapi/: DAIRO.md.tmpl  main.py.tmpl
src/init/templates/flask/: DAIRO.md.tmpl  app.py.tmpl
src/init/templates/go-http/: DAIRO.md.tmpl  go.mod.tmpl  main.go.tmpl
src/init/templates/hono/: DAIRO.md.tmpl
src/init/templates/hono/src/: index.ts.tmpl
src/init/templates/next/: DAIRO.md.tmpl
src/init/templates/next/app/api/dairo/send/: route.ts.tmpl
src/init/templates/next/app/api/dairo/webhook/: route.ts.tmpl
src/init/templates/next/lib/: dairo.ts.tmpl
src/listen/: time.rs
tests/: cli_contract.rs  contract_projection.rs
