[package]
name = "dairo"
version = "0.0.10"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Official Dairo command-line interface"
repository = "https://github.com/dairo-app/dairo-cli"
homepage = "https://dairo.app"
documentation = "https://github.com/dairo-app/dairo-cli#readme"
keywords = ["dairo", "email", "cli", "sdk", "api"]
categories = ["api-bindings", "command-line-utilities"]

[[bin]]
name = "dairo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
hmac = "0.12"
interim = { version = "0.1", features = ["chrono"] }
# Pure-Rust backends only (no system C deps): macOS Keychain, Windows Credential
# Manager, and the Linux kernel keyutils — so CI/Linux builds need no libdbus.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
self-replace = "1.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time", "signal"] }
toml = "0.8"
url = "2.5"
uuid = { version = "1.17", features = ["v4", "v5"] }
webbrowser = "1.0"
zip = { version = "6", default-features = false, features = ["deflate-flate2"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.20"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
